Fix footer size on tablet version

--- a/src/scss/awesome-card.scss
+++ b/src/scss/awesome-card.scss
@@ -13,6 +13,7 @@ html{
     background-image: linear-gradient(to bottom, $white-four, $white-two);
 
     @media all and (min-width: 768px) {
+        min-height: 58vh;
     padding: 2rem 3rem 2rem 0;
     display: flex;
     flex-direction: row-reverse;
