--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,6 +1,6 @@
 .footer{
     width: 100%;
-    height: 10vh;
+    height: 15vh;
     background-color:$white-two;
     border-top: solid 0.1rem $white-three;
     display:flex;
