--- a/src/scss/layout/main/_form-design.scss
+++ b/src/scss/layout/main/_form-design.scss
@@ -35,7 +35,7 @@
   }
 
   &--div {
-    padding: 20px;
+    padding: 20px 0;
     width: 100%;
 
     &--title {
