--- a/src/scss/layout/main/_form-share.scss
+++ b/src/scss/layout/main/_form-share.scss
@@ -11,6 +11,7 @@
     border-top: solid 1px $white-three;
     width: 100%;
     cursor: pointer;
+    padding-bottom: 1rem;
 
     .fa-share-nodes {
       color: $dull-orange;
