--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,3 +8,7 @@
 html{
     font-size: 62.5%;
 }
+
+.footer {
+    height: 15vh;
+}
